--- a/18 Grid CSS/The Loop/index.html
+++ b/18 Grid CSS/The Loop/index.html
@@ -5,11 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Loop</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <header class="header">
+        <div class="wrapper">
+            <div class="header__logo">
+                <a href="#" class="header__logo-pic">
+                    <img src="./images/Logo.png" alt="the loop">
+                </a>
+                <h1>The Loop</h1>
+            </div>
+            <nav class="header__nav">
+                <ul class="header__list">
+                    <li class="header_item">
+                        <a href="#" class="header__link">Для мужчин</a>
+                    </li>
+                    <li class="header_item">
+                        <a href="#" class="header__link">Для женщин</a>
+                    </li>
+                    <li class="header_item">
+                        <a href="#" class="header__link">Для детей</a>
+                    </li>
+                    <li class="header_item">
+                        <a href="#" class="header__link">Оплата</a>
+                    </li>
+                    <li class="header_item">
+                        <a href="#" class="header__link">Доставка</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </header>
     
-
-
-
+    
   </body>
 </html>
