--- a/18 Grid CSS/The Loop/index.html
+++ b/18 Grid CSS/The Loop/index.html
@@ -9,35 +9,41 @@
   </head>
   <body>
     <header class="header">
-        <div class="wrapper">
-            <div class="header__logo">
-                <a href="#" class="header__logo-pic">
-                    <img src="./images/Logo.png" alt="the loop">
-                </a>
-                <h1>The Loop</h1>
-            </div>
-            <nav class="header__nav">
-                <ul class="header__list">
-                    <li class="header_item">
-                        <a href="#" class="header__link">Для мужчин</a>
-                    </li>
-                    <li class="header_item">
-                        <a href="#" class="header__link">Для женщин</a>
-                    </li>
-                    <li class="header_item">
-                        <a href="#" class="header__link">Для детей</a>
-                    </li>
-                    <li class="header_item">
-                        <a href="#" class="header__link">Оплата</a>
-                    </li>
-                    <li class="header_item">
-                        <a href="#" class="header__link">Доставка</a>
-                    </li>
-                </ul>
-            </nav>
+      <div class="wrapper">
+        <div class="header__wrapper">
+          <nav class="header__nav">
+            <ul class="header__list">
+              <li class="header__item">
+                <a href="#" class="header__link">Для мужчин</a>
+              </li>
+              <li class="header__item">
+                <a href="#" class="header__link">Для женщин</a>
+              </li>
+              <li class="header__item header__child">
+                <a href="#" class="header__link">Для детей</a>
+              </li>
+              <li class="header__item">
+                <div class="header__logo">
+                  <img
+                    src="./images/Logo.png"
+                    alt="the loop"
+                    class="header__logo-pic"
+                  />
+                  <h1>The Loop</h1>
+                </div>
+              </li>
+              <li class="header__item">
+                <a href="#" class="header__link">Оплата</a>
+              </li>
+              <li class="header__item">
+                <a href="#" class="header__link">Доставка</a>
+              </li>
+            </ul>
+          </nav>
         </div>
+      </div>
     </header>
-    
-    
+
+    <main class="main"></main>
   </body>
 </html>
